Boutons par défaut

--- a/application/views/scripts/dossier/liees.phtml
+++ b/application/views/scripts/dossier/liees.phtml
@@ -294,7 +294,7 @@ echo "
 								</span>
 								<span style='display:none;' >
 									<button class='confirmDelete btn btn-danger'>Confirmer la suppression</button>
-									<button class='cancelDelete btn'>Annuler</button>
+									<button class='cancelDelete btn btn-default'>Annuler</button>
 								</span>
 							</div>
 						";
@@ -306,8 +306,8 @@ echo "
 					<input type='radio' name='linkType' value='etablissement'>Etablissement&nbsp;&nbsp;
 					<input type='text' id='saisieEtab' value='' style='width:500px;display:none;' />
 
-					<button class='add btn' id='add' style='display:none;' >Lier l'établissement au dossier</button>
-					<button class='cancelAdd btn' id='cancelAdd' style='display:none;' >Choisir un autre établissement</button>
+					<button class='add btn btn-default' id='add' style='display:none;' >Lier l'établissement au dossier</button>
+					<button class='cancelAdd btn btn-default' id='cancelAdd' style='display:none;' >Choisir un autre établissement</button>
 					<input type='hidden' name='idSelect' id='idSelect' value=''  />
 				</div>
 				";
