--- a/application/views/scripts/dossier/prescription-edit.phtml
+++ b/application/views/scripts/dossier/prescription-edit.phtml
@@ -95,7 +95,7 @@
             <label for="DATE_LEVEE">Date de levée</label>
             <input class='date' type='text' name='DATE_LEVEE' id='DATE_LEVEE' value="<?= $this->infosPrescription['DATE_LEVEE'] ?>" />
             &nbsp;
-            <button type='button' class='today btn'>
+            <button type='button' class='today btn btn-default'>
                 <i class='glyphicon glyphicon-calendar'></i>
                 &nbsp;Aujourd'hui
             </button>
