--- a/application/views/scripts/gestion-prescriptions/savetexte.phtml
+++ b/application/views/scripts/gestion-prescriptions/savetexte.phtml
@@ -8,10 +8,10 @@ echo "
 		".$this->texte['LIBELLE_PRESCRIPTIONTEXTE']."
 	</span>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<button class='showDetailTexte btn' id='showarticle_".$this->texte['ID_PRESCRIPTIONTEXTE']."' >Afficher les détails</button>
-	<button class='hideDetailTexte btn' id='hidearticle_".$this->texte['ID_PRESCRIPTIONTEXTE']."' style='display:none;'>Masquer les détails</button>
+	<button class='showDetailTexte btn btn-default' id='showarticle_".$this->texte['ID_PRESCRIPTIONTEXTE']."' >Afficher les détails</button>
+	<button class='hideDetailTexte btn btn-default' id='hidearticle_".$this->texte['ID_PRESCRIPTIONTEXTE']."' style='display:none;'>Masquer les détails</button>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<button class='editTexte btn' id='".$this->texte['ID_PRESCRIPTIONTEXTE']."' >Modifier</button>
+	<button class='editTexte btn btn-default' id='".$this->texte['ID_PRESCRIPTIONTEXTE']."' >Modifier</button>
 	<br/>
 	<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='article_".$this->texte['ID_PRESCRIPTIONTEXTE']."'></div>
 	<br/>
