--- a/application/views/scripts/gestion-prescriptions/showprescriptionarticle.phtml
+++ b/application/views/scripts/gestion-prescriptions/showprescriptionarticle.phtml
@@ -14,10 +14,10 @@
 					".$ue['LIBELLE_PRESCRIPTIONARTICLE']."
 				</span>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='showDetailArticle btn' id='showDetailArticle_".$ue['ID_PRESCRIPTIONARTICLE']."' >Afficher les détails</button>
-				<button class='hideDetailArticle btn' id='hideDetailArticle_".$ue['ID_PRESCRIPTIONARTICLE']."' style='display:none;'>Masquer les détails</button>
+				<button class='showDetailArticle btn btn-default' id='showDetailArticle_".$ue['ID_PRESCRIPTIONARTICLE']."' >Afficher les détails</button>
+				<button class='hideDetailArticle btn btn-default' id='hideDetailArticle_".$ue['ID_PRESCRIPTIONARTICLE']."' style='display:none;'>Masquer les détails</button>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='editArticle btn' id='".$ue['ID_PRESCRIPTIONARTICLE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
+				<button class='editArticle btn btn-default' id='".$ue['ID_PRESCRIPTIONARTICLE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
 				<br/>
 				<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='articleDetail_".$ue['ID_PRESCRIPTIONARTICLE']."'></div>
 				<br/>
@@ -60,7 +60,7 @@
 							<input type='hidden' name='prescType[]' value='".$this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']."' />
 							".nl2br($this->prescriptionType[$i][0]['PRESCRIPTIONTYPE_LIBELLE'])."
 						</td>";
-					echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn' data-toggle='modal'>Editer</a></td>";
+					echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn btn-default' data-toggle='modal'>Editer</a></td>";
 					$cpt = false;
 				}
 				echo "
@@ -79,9 +79,9 @@
 	";
 	echo "<br/>";
 	echo "
-		<button class='addArticleTexte btn' >Ajouter un article</button>
+		<button class='addArticleTexte btn btn-default' >Ajouter un article</button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href='#myModal' role='button' class='prescription btn' id='addPrescriptionTexte_".$this->idTexte."' data-toggle='modal'>Ajouter une prescription</a>
+		<a href='#myModal' role='button' class='prescription btn btn-default' id='addPrescriptionTexte_".$this->idTexte."' data-toggle='modal'>Ajouter une prescription</a>
 	";
 
 ?>
