--- a/application/views/scripts/calendrier-des-commissions/dialogcomm.phtml
+++ b/application/views/scripts/calendrier-des-commissions/dialogcomm.phtml
@@ -212,7 +212,7 @@ if(isset($this->do) && $this->do == 'edit'){
 					<li class='col-md-2'>Heure début</li>
 					<li class='col-md-2'>Heure fin</li>
 					<li class='col-md-2'>
-						<button class='addDate btn'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;</button>
+						<button class='addDate btn btn-default'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;</button>
 					</li>
 				</ul>
 	";
@@ -233,7 +233,7 @@ if(isset($this->do) && $this->do == 'edit'){
 						<li class='col-md-2'>
 		";
 		if($paspremier != 0) {
-			echo "<button class='suppression btn'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>";
+			echo "<button class='suppression btn btn-default'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>";
 		}
 		echo "
 						</li>
@@ -260,15 +260,15 @@ if(isset($this->do) && $this->do == 'edit'){
 					<li class='col-md-2'><input type='text' size='8' class='time' id='D_".$this->dateAjouteeInput."' name='D_".$this->dateAjouteeInput."' value='09:00'/></li>
 					<li class='col-md-2'><input type='text' size='8' class='time' id='F_".$this->dateAjouteeInput."' name='F_".$this->dateAjouteeInput."' value='18:00'/></li>
 					<li class='col-md-2'>
-						<button class='suppression btn' ><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>
+						<button class='suppression btn btn-default' ><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>
 					</li>
 			";
 		    break;
 		case 'libelleCom':
 			echo "
 				Saisissez le libellé de la commission <input type='text' name='value_libelleCom' id='value_libelleCom' value='".htmlentities($this->libelleDateComm, ENT_QUOTES)."' />
-				<button class='validation btn' id='valid_libelleCom'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;</button>
-				<button class='annulation btn' id='annule_libelleCom'><span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;</button>
+				<button class='validation btn btn-default' id='valid_libelleCom'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;</button>
+				<button class='annulation btn btn-default' id='annule_libelleCom'><span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;</button>
 			";
 		    break;
 		case 'valid_libelleCom':
@@ -312,7 +312,7 @@ function afficheLibelleDateComm($libelle){
 	//affiche le libelle  de la commission en mode lectude d'infos
 	return "
 		Libelle de la commission : ".$libelle."
-		<button id='edit_libelleCom' class='edition btn'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
+		<button id='edit_libelleCom' class='edition btn btn-default'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
 	";
 }
 
@@ -321,7 +321,7 @@ function afficheTypeDateComm($libelleCom){
 	return "
 		Le type de commission est :
 	".$libelleCom."
-		<button id='edit_typeCom' class='edition btn'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
+		<button id='edit_typeCom' class='edition btn btn-default'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
 	";
 }
 
@@ -341,8 +341,8 @@ function modifTypeComm($listeCommType, $idSelect){
 	}
 	return $affiche .= "
 		</select>
-		<button class='validation btn' id='valid_typeCom'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;</button>
-		<button class='annulation btn' id='annule_typeCom'><span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;</button>
+		<button class='validation btn btn-default' id='valid_typeCom'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;</button>
+		<button class='annulation btn btn-default' id='annule_typeCom'><span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;</button>
 	";
 }
 
@@ -355,7 +355,7 @@ function afficheTabListeDates($listeDates){
 						<li class='col-md-2'>Heure début</li>
 						<li class='col-md-2'>Heure fin</li>
 						<li class='col-md-2'>
-							<button class='addDate btn'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;</button>
+							<button class='addDate btn btn-default'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;</button>
 						</li>
 					</ul>
 	";
@@ -373,11 +373,11 @@ function afficheTabListeDates($listeDates){
 						<li class='col-md-2'>
 		";
 		$affiche .= "
-						<button class='edition btn' name='edition' id='edit_dateComm_".$dates['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
+						<button class='edition btn btn-default' name='edition' id='edit_dateComm_".$dates['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
 		";
 		if($dates['DATECOMMISSION_LIEES']){
-			$affiche .= "<button class='suppression btn' id='supp_dateComm_".$dates['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>";
-			$affiche .= "<button style='float:right;' class='dateDefaut btn' id='defaut_dateComm_".$dates['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-check' aria-hidden='true'></span>&nbsp;</button>";
+			$affiche .= "<button class='suppression btn btn-default' id='supp_dateComm_".$dates['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>";
+			$affiche .= "<button style='float:right;' class='dateDefaut btn btn-default' id='defaut_dateComm_".$dates['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-check' aria-hidden='true'></span>&nbsp;</button>";
 		}
 		$affiche .= "
 						</li>
@@ -407,8 +407,8 @@ function afficheDateEdit($dateInfos,$first=null){
 			<input type='text' size='8' class='time' id='F_".$dateInfos['ID_DATECOMMISSION']."' name='F_".$dateInfos['ID_DATECOMMISSION']."' value='".$heureFin."' />
 		</li>
 		<li class='col-md-2'>
-			<button class='validation btn' name='validation' id='annule_dateCom_".$dateInfos['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;</button>
-			<button class='annulation btn' name='annulation' id='annule_dateCom_".$dateInfos['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;</button>
+			<button class='validation btn btn-default' name='validation' id='annule_dateCom_".$dateInfos['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;</button>
+			<button class='annulation btn btn-default' name='annulation' id='annule_dateCom_".$dateInfos['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;</button>
 			<input type='hidden' name='first' id='first' value='".$first."' />
 		</li>
 	";
@@ -427,11 +427,11 @@ function afficheDateValid($date,$first=null){
 				<li class='col-md-2'>".$heureDebut." </li>
 				<li class='col-md-2'>".$heureFin." </li>
 				<li class='col-md-2'>
-					<button class='edition btn' id='edit_dateComm_".$buttonEdition."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
+					<button class='edition btn btn-default' id='edit_dateComm_".$buttonEdition."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
 	";
 	if($date['DATECOMMISSION_LIEES']){
-		$affiche.= "<button class='suppression btn' id='supp_dateComm_".$buttonEdition."'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>";
-		$affiche .= "<button style='float:right;' class='dateDefaut btn' id='defaut_dateComm_".$date['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-check' aria-hidden='true'></span>&nbsp;</button>";
+		$affiche.= "<button class='suppression btn btn-default' id='supp_dateComm_".$buttonEdition."'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>";
+		$affiche .= "<button style='float:right;' class='dateDefaut btn btn-default' id='defaut_dateComm_".$date['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-check' aria-hidden='true'></span>&nbsp;</button>";
 	}
 	return $affiche .= "
 				</li>
@@ -449,9 +449,9 @@ function ajoutDateLiee($tabDate,$date){
 			<li class='col-md-2'>".$heureDebut."</li>
 			<li class='col-md-2'>".$heureFin."</li>
 			<li class='col-md-2'>
-				<button class='edition btn' id='edit_dateComm_".$tabDate['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
-				<button class='suppression btn' id='supp_dateComm_".$tabDate['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>
-				<button style='float:right;' class='dateDefaut btn' id='defaut_dateComm_".$tabDate['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-check' aria-hidden='true'></span>&nbsp;</button>
+				<button class='edition btn btn-default' id='edit_dateComm_".$tabDate['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;</button>
+				<button class='suppression btn btn-default' id='supp_dateComm_".$tabDate['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span>&nbsp;</button>
+				<button style='float:right;' class='dateDefaut btn btn-default' id='defaut_dateComm_".$tabDate['ID_DATECOMMISSION']."'><span class='glyphicon glyphicon-check' aria-hidden='true'></span>&nbsp;</button>
 			</li>
 		</ul>
 	";
@@ -489,7 +489,7 @@ function afficheDivPeriodicite($countLigne,$doVal){
 	";
 	
 	if($doVal == 'edit') {
-		$affiche .= "<button class='validPeriodicite btn'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;</button>";
+		$affiche .= "<button class='validPeriodicite btn btn-default'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;</button>";
 	}
 		
 	return $affiche .= "
@@ -507,8 +507,8 @@ function divAddDate(){
 					Selectionnez la date <input type='text' class='date' id='addDate' />
 				</li>
 				<li class='col-md-4'>
-					<button class='validAddDate btn'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;</button>
-					<button class='cancelAddDate btn'><span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;</button>
+					<button class='validAddDate btn btn-default'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;</button>
+					<button class='cancelAddDate btn btn-default'><span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;</button>
 				</li>
 			</ul>
 		</div>
