--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -121,7 +121,7 @@
         case 7: ?>
             <div class="colDate" >
                 <input type='text' class='date' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' value='<?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?>'>
-                <button type="button" class='today btn'>
+                <button type="button" class='today btn btn-default'>
                     <i class='icon-calendar' aria-hidden='true'></i>
                     Aujourd'hui
                 </button>
