--- a/application/views/scripts/gestion-prescriptions/index.phtml
+++ b/application/views/scripts/gestion-prescriptions/index.phtml
@@ -36,10 +36,10 @@
 					".$ue['LIBELLE_PRESCRIPTION_CAT']."
 				</span>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='showDetailCat btn' id='showtexte_".$ue['ID_PRESCRIPTION_CAT']."' >Afficher les détails</button>
-				<button class='hideDetailCat btn' id='hidetexte_".$ue['ID_PRESCRIPTION_CAT']."' style='display:none;'>Masquer les détails</button>
+				<button class='showDetailCat btn btn-default' id='showtexte_".$ue['ID_PRESCRIPTION_CAT']."' >Afficher les détails</button>
+				<button class='hideDetailCat btn btn-default' id='hidetexte_".$ue['ID_PRESCRIPTION_CAT']."' style='display:none;'>Masquer les détails</button>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='editCategorie btn' id='".$ue['ID_PRESCRIPTION_CAT']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
+				<button class='editCategorie btn btn-default' id='".$ue['ID_PRESCRIPTION_CAT']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
 				<br/>
 				<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='texte_".$ue['ID_PRESCRIPTION_CAT']."'></div>
 				<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='prescriptionCat_".$ue['ID_PRESCRIPTION_CAT']."'></div>
@@ -74,7 +74,7 @@
 			if($cpt)
 			{
 				echo "<td rowspan='".$nbAssoc."' class='col-md-5'>".nl2br($this->prescriptionType[$i][0]['PRESCRIPTIONTYPE_LIBELLE'])."</td>";
-				echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><button class='editPrescriptionType btn' id='' >Editer</button></td>";
+				echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><button class='editPrescriptionType btn btn-default' id='' >Editer</button></td>";
 				$cpt = false;
 			}
 			echo "
@@ -88,7 +88,7 @@
 	}
 	echo "
 		</ul>
-		<button class='categorie btn' >Ajouter</button>
+		<button class='categorie btn btn-default' >Ajouter</button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<br/>
 	";
