--- a/application/views/scripts/gestion-prescriptions/savearticle.phtml
+++ b/application/views/scripts/gestion-prescriptions/savearticle.phtml
@@ -8,10 +8,10 @@ echo "
 		".$this->article['LIBELLE_PRESCRIPTIONARTICLE']."
 	</span>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<button class='showDetailArticle btn' id='showDetailArticle_".$this->article['ID_PRESCRIPTIONARTICLE']."' >Afficher les détails</button>
-	<button class='hideDetailArticle btn' id='hideDetailArticle_".$this->article['ID_PRESCRIPTIONARTICLE']."' style='display:none;'>Masquer les détails</button>
+	<button class='showDetailArticle btn btn-default' id='showDetailArticle_".$this->article['ID_PRESCRIPTIONARTICLE']."' >Afficher les détails</button>
+	<button class='hideDetailArticle btn btn-default' id='hideDetailArticle_".$this->article['ID_PRESCRIPTIONARTICLE']."' style='display:none;'>Masquer les détails</button>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<button class='editArticle btn' id='".$this->article['ID_PRESCRIPTIONARTICLE']."' >Modifier</button>
+	<button class='editArticle btn btn-default' id='".$this->article['ID_PRESCRIPTIONARTICLE']."' >Modifier</button>
 	<br/>
 	<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='articleDetail_".$this->article['ID_PRESCRIPTIONARTICLE']."'></div>
 	<br/>
