--- a/application/views/scripts/gestion-prescriptions/savecategorie.phtml
+++ b/application/views/scripts/gestion-prescriptions/savecategorie.phtml
@@ -8,10 +8,10 @@ echo "
 		".$this->categorie['LIBELLE_PRESCRIPTION_CAT']."
 	</span>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<button class='showDetailCat btn' id='showtexte_".$this->categorie['ID_PRESCRIPTION_CAT']."' >Afficher les détails</button>
-	<button class='hideDetailCat btn' id='hidetexte_".$this->categorie['ID_PRESCRIPTION_CAT']."' style='display:none;'>Masquer les détails</button>
+	<button class='showDetailCat btn btn-default' id='showtexte_".$this->categorie['ID_PRESCRIPTION_CAT']."' >Afficher les détails</button>
+	<button class='hideDetailCat btn btn-default' id='hidetexte_".$this->categorie['ID_PRESCRIPTION_CAT']."' style='display:none;'>Masquer les détails</button>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<button class='editCategorie btn' id='".$this->categorie['ID_PRESCRIPTION_CAT']."' >Modifier</button>
+	<button class='editCategorie btn btn-default' id='".$this->categorie['ID_PRESCRIPTION_CAT']."' >Modifier</button>
 	<br/>
 	<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='texte_".$this->categorie['ID_PRESCRIPTION_CAT']."'></div>
 	<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='prescriptionCat_".$this->categorie['ID_PRESCRIPTION_CAT']."'></div>
