--- a/application/views/scripts/gestion-prescriptions/saveprescriptiontype.phtml
+++ b/application/views/scripts/gestion-prescriptions/saveprescriptiontype.phtml
@@ -20,7 +20,7 @@
 					<input type='hidden' name='prescType[]' value='".$presc['ID_PRESCRIPTIONTYPE']."' />
 					".nl2br($presc['PRESCRIPTIONTYPE_LIBELLE'])."
 				</td>";
-			echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn' data-toggle='modal'>Editer</a></td>";
+			echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn btn-default' data-toggle='modal'>Editer</a></td>";
 			$cpt = false;
 		}
 		echo "
