--- a/application/views/scripts/gestion-prescriptions/showprescriptiontexte.phtml
+++ b/application/views/scripts/gestion-prescriptions/showprescriptiontexte.phtml
@@ -15,10 +15,10 @@
 					".$ue['LIBELLE_PRESCRIPTIONTEXTE']."
 				</span>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='showDetailTexte btn' id='showarticle_".$ue['ID_PRESCRIPTIONTEXTE']."' >Afficher les détails</button>
-				<button class='hideDetailTexte btn' id='hidearticle_".$ue['ID_PRESCRIPTIONTEXTE']."' style='display:none;'>Masquer les détails</button>
+				<button class='showDetailTexte btn btn-default' id='showarticle_".$ue['ID_PRESCRIPTIONTEXTE']."' >Afficher les détails</button>
+				<button class='hideDetailTexte btn btn-default' id='hidearticle_".$ue['ID_PRESCRIPTIONTEXTE']."' style='display:none;'>Masquer les détails</button>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='editTexte btn' id='".$ue['ID_PRESCRIPTIONTEXTE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
+				<button class='editTexte btn btn-default' id='".$ue['ID_PRESCRIPTIONTEXTE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
 				<br/>
 				<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='article_".$ue['ID_PRESCRIPTIONTEXTE']."'></div>
 				<br/>
@@ -64,7 +64,7 @@
 							<input type='hidden' name='prescType[]' value='".$this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']."' />
 							".nl2br($this->prescriptionType[$i][0]['PRESCRIPTIONTYPE_LIBELLE'])."
 						</td>";
-					echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn' data-toggle='modal'>Editer</a></td>";
+					echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn btn-default' data-toggle='modal'>Editer</a></td>";
 					$cpt = false;
 				}
 				echo "
@@ -83,9 +83,9 @@
 	";
 	echo "<br/>";
 	echo "
-		<button class='addTexteCat btn' >Ajouter un type de disposition</button>
+		<button class='addTexteCat btn btn-default'>Ajouter un type de disposition</button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href='#myModal' role='button' class='prescription btn' id='addPrescriptionCat_".$this->idCategorie."' data-toggle='modal'>Ajouter une prescription à la catégorie</a>
+		<a href='#myModal' role='button' class='prescription btn btn-default' id='addPrescriptionCat_".$this->idCategorie."' data-toggle='modal'>Ajouter une prescription à la catégorie</a>
 	";
 ?>
 
