--- a/application/views/scripts/gestion-textes-applicables/index.phtml
+++ b/application/views/scripts/gestion-textes-applicables/index.phtml
@@ -26,7 +26,7 @@ foreach($this->listeTextesAppl as $val => $ue){
 	echo "
 		<li class='row' style='margin-top:15px;margin-bottom:10px;' id='".$ue['ID_TEXTESAPPL']."'>
 			<div class='col-md-10'>".nl2br($ue['LIBELLE_TEXTESAPPL'])."</div>
-			<div class='col-md-1'><button class='editTexteAppl btn' id='".$ue['ID_TEXTESAPPL']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Editer</button></div>
+			<div class='col-md-1'><button class='editTexteAppl btn btn-default' id='".$ue['ID_TEXTESAPPL']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Editer</button></div>
 			<div class='col-md-1'>".( ($ue['VISIBLE_TEXTESAPPL'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."</div>
 		</li>
 	";
