--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -337,7 +337,7 @@ endif ?>
 </div>
 
 <!-- Modal -->
-<div class="modal hide fade" tabindex="-1" id="modal-desc" >
+<div class="modal fade" tabindex="-1" id="modal-desc" >
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
