--- a/application/views/scripts/couches-cartographiques/list.phtml
+++ b/application/views/scripts/couches-cartographiques/list.phtml
@@ -106,9 +106,9 @@
 <?php if (count($this->couches_cartographiques) == 0) : ?>
     <div class='well well-large text-center'>
         <p class='lead'>Il n'y a pas de couche cartographique.</p>
-        <p><a href='<?php echo $this->url(array('action' => 'add')) ?>' class='btn btn-lg'>Ajouter une couche personnalisée</a></p>
+        <p><a href='<?php echo $this->url(array('action' => 'add')) ?>' class='btn btn-default btn-lg'>Ajouter une couche personnalisée</a></p>
         <p>
-            <a href='<?php echo $this->url(array('action' => 'add-couche-ign')) ?>' class='btn btn-lg'>
+            <a href='<?php echo $this->url(array('action' => 'add-couche-ign')) ?>' class='btn btn-default btn-lg'>
                 Ajouter une couche IGN
             </a>
             <div class="alert">
