--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -2557,7 +2557,7 @@ $(".delaipresc").live('click', function() {
 </div>
 
 <!-- Boite de confirmation de la suppression (cachée par défaut) -->
-<div id="confirm-modal" class="modal hide fade">
+<div id="confirm-modal" class="modal fade">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h3>Confirmation de la suppression</h3>
