--- a/application/views/scripts/dossier/textes-applicables.phtml
+++ b/application/views/scripts/dossier/textes-applicables.phtml
@@ -8,7 +8,7 @@
 
     <div class='well well-large text-center'>
         <p class='lead'>Il n'y a pas de texte applicable.</p>
-        <p><a href='<?php echo $this->url(array('action' => 'edit-textes-applicables')) ?>' class='btn btn-lg'>Gérer les textes applicables</a></p>
+        <p><a href='<?php echo $this->url(array('action' => 'edit-textes-applicables')) ?>' class='btn btn-default btn-lg'>Gérer les textes applicables</a></p>
     </div>
 
 <?php else : ?>
