--- a/application/views/scripts/etablissement/edit-contacts.phtml
+++ b/application/views/scripts/etablissement/edit-contacts.phtml
@@ -37,7 +37,7 @@
 </table>
 <?php endif ?>
 
-<div id="reponse-modal" class="modal hide fade" ></div>
+<div id="reponse-modal" class="modal fade" ></div>
 
 <script type="text/javascript">
     $(document).ready(function() {
