--- a/application/views/scripts/etablissement/edit-pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/edit-pieces-jointes.phtml
@@ -43,7 +43,7 @@
 </table>
 <?php endif ?>
 
-<div id="reponse-modal" class="modal hide fade" ></div>
+<div id="reponse-modal" class="modal fade" ></div>
 
 <script type="text/javascript">
     Dropzone.autoDiscover = false;
