--- a/application/views/scripts/formulaire/partials/rubrique/delete.phtml
+++ b/application/views/scripts/formulaire/partials/rubrique/delete.phtml
@@ -8,7 +8,7 @@
             <div class="modal-body">
                 Vous êtes sur le point de supprimer la rubrique <strong><span id="name-rubrique"></span></strong>.
                 <br />
-                <small class="text-muted">Toutes les données associées seront également supprimées.</small>
+                <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>&nbsp;<small class="text-muted">Toutes les données associées seront également supprimées.</small>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
