--- a/application/views/scripts/etablissement/pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/pieces-jointes.phtml
@@ -8,7 +8,7 @@
 
     <div class='well well-large text-center'>
         <p class='lead'>Il n'y a pas de pièce jointe.</p>
-        <p><a href='<?php echo $this->url(array('action' => 'edit-pieces-jointes')) ?>' class='btn btn-lg'>Ajouter une pièce jointe</a></p>
+        <p><a href='<?php echo $this->url(array('action' => 'edit-pieces-jointes')) ?>' class='btn btn-default btn-lg'>Ajouter une pièce jointe</a></p>
     </div>
 
 <?php else : ?>
