--- a/public/css/formulaire/formulaire.css
+++ b/public/css/formulaire/formulaire.css
@@ -24,17 +24,6 @@ label.optional {
     vertical-align: middle;
 }
 
-div[id^='saved-rubriques-'] a {
-    display: block;
-}
-
-.infos-rubrique,
-.infos-champ {
-	border: 1px dotted #818183;
-	padding: 20px 20px 20px 20px;
-	margin-bottom: 20px;
-}
-
 .infos-champ #div-list-value {
     display: none;
 }
@@ -49,7 +38,9 @@ td.tdMove {
     text-align: center;
 }
 
-#actions a {
+#actions a,
+#actions button {
     padding: 0.5rem;
     text-decoration: none;
+    color: black;
 }
