--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -3,137 +3,154 @@
     Retourner sur la liste des formulaires
 </a>
 
-<div class="row">
-    <h3>Informations sur la rubrique</h3>
+<div class="row mt-4">
     <div class="col-md-4 infos-rubrique">
-        <!-- TODO: Utiliser le formulaire de Zend -->
-        <form action class="form-inline" method="post">
-            <input type="hidden" id="rubrique-id" value="<?= $this->rubrique['ID_RUBRIQUE'] ?>">
-            <div>
-                <label for="nom_rubrique">Nom de la rubrique</label>
-                <input type="text" name="nom_rubrique" id="nom_rubrique" value="<?= htmlspecialchars($this->rubrique['NOM'], ENT_QUOTES) ?>" required>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Informations sur la rubrique</h3>
             </div>
-            <div>
-                <label for="afficher_rubrique">Afficher la rubrique par défaut</label>
-                <input
-                    type="hidden"
-                    name="afficher_rubrique"
-                    value="0"
-                >
-                <input
-                    type="checkbox"
-                    name="afficher_rubrique"
-                    value="1"
-                    <?= $this->rubrique['DEFAULT_DISPLAY'] ? 'checked' : '' ?>
-                >
-            </div>
+            <div class="panel-body">
+                <!-- TODO: Utiliser le formulaire de Zend -->
+                <form action class="form-inline" method="post">
+                    <input type="hidden" id="rubrique-id" value="<?= $this->rubrique['ID_RUBRIQUE'] ?>">
+                    <div>
+                        <label for="nom_rubrique">Nom de la rubrique</label>
+                        <input class="form-control" type="text" name="nom_rubrique" id="nom_rubrique" value="<?= htmlspecialchars($this->rubrique['NOM'], ENT_QUOTES) ?>" required>
+                    </div>
+                    <div>
+                        <label for="afficher_rubrique">Afficher la rubrique par défaut</label>
+                        <input
+                            type="hidden"
+                            name="afficher_rubrique"
+                            value="0"
+                        >
+                        <input
+                            type="checkbox"
+                            name="afficher_rubrique"
+                            value="1"
+                            <?= $this->rubrique['DEFAULT_DISPLAY'] ? 'checked' : '' ?>
+                        >
+                    </div>
 
-            <div class="pull-left">
-                <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'index'], null, true) ?>" type="button" class="btn btn-default">Annuler</a>
-                <button type="submit" class="btn btn-success">Sauvegarder la rubrique</button>
+                    <div class="pull-right">
+                        <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'index'], null, true) ?>" type="button" class="btn btn-default">Annuler</a>
+                        <button type="submit" class="btn btn-success">Sauvegarder la rubrique</button>
+                    </div>
+                </form>
             </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<?= $this->partial('formulaire/partials/champ/partial-add-and-list-titles.phtml', [
-    'count' => count($this->champs),
-]); ?>
-
-<div id="edit-rubrique" class="row">
+<div class="row champs">
     <div class="col-md-4 infos-champ">
-        <form enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
-            <div>
-                <?= $this->fieldForm->nom_champ ?>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Informations sur le champ</h3>
             </div>
-            <div>
-                <?= $this->fieldForm->type_champ ?>
-            </div>
+            <div class="panel-body">
+                <form enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
+                    <div>
+                        <?= $this->fieldForm->nom_champ ?>
+                    </div>
+                    <div>
+                        <?= $this->fieldForm->type_champ ?>
+                    </div>
 
-            <div id="div-list-value">
-                <h5>Définition des valeurs de la liste</h5>
-                <div class="row">
-                    <a href='#' id='add-list-value'>Ajouter une valeur</a>
-                </div>
-                <div class="row">
-                    <div id="list-value" class="col-md-10"></div>
-                </div>
-            </div>
+                    <div id="div-list-value">
+                        <h5>Définition des valeurs de la liste</h5>
+                        <div class="row">
+                            <button type="button" id='add-list-value' class="btn btn-link">Ajouter une valeur</button>
+                        </div>
+                        <div class="row">
+                            <div id="list-value" class="col-md-10"></div>
+                        </div>
+                    </div>
 
-            <?= $this->fieldForm->save ?>
-        </form>
+                    <?= $this->fieldForm->save ?>
+                </form>
+            </div>
+        </div>
     </div>
 
-    <div id="saved-fields" class="col-md-6 col-md-offset-2">
-        <?php if(count($this->champs) > 0): ?>
-            <table class="table table-bordered table-condensed">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Nom du champ</th>
-                        <th>Type du champ</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody id='grp1' class="grp">
-                    <?php foreach($this->champs as $champ): ?>
-                        <tr id=<?=$champ['ID_CHAMP']?>>
-                            <td class='tdMove'><span class="glyphicon glyphicon-move" aria-hidden="true"></span></td>
-                            <td><?= $champ['NOM'] ?></td>
-                            <td>
-                                <?= $champ['TYPE'] ?>
+    <?php if (count($this->champs) > 0): ?>
+        <div class="col-md-6 col-md-offset-2 saved-fields">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Liste des champs</h3>
+                </div>
+                <table class="table table-bordered table-condensed">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Nom du champ</th>
+                            <th>Type du champ</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody id='grp1' class="grp">
+                        <?php foreach($this->champs as $champ): ?>
+                            <tr id=<?=$champ['ID_CHAMP']?>>
+                                <td class='tdMove'><span class="glyphicon glyphicon-move" aria-hidden="true"></span></td>
+                                <td><?= $champ['NOM'] ?></td>
+                                <td>
+                                    <?= $champ['TYPE'] ?>
 
-                                <?php if($champ['TYPE'] === 'Parent'): ?>
-                                    <?php if (1 === intval($champ['tableau'])): ?>
-                                        (affiché comme tableau)
+                                    <?php if($champ['TYPE'] === 'Parent'): ?>
+                                        <?php if (1 === intval($champ['tableau'])): ?>
+                                            (affiché comme tableau)
+                                        <?php endif ?>
+
+                                        <?php if(!empty($champ['LIST_CHAMP'])) : ?>
+                                            <ul>
+                                                <?php foreach($champ['LIST_CHAMP'] as $champFils): ?>
+                                                    <li>
+                                                        <?= $champFils['NOM']?>
+                                                        <i><?= $champFils['TYPE']?></i>
+                                                    </li>
+                                                <?php endforeach ?>
+                                            </ul>
+                                        <?php else : ?>
+                                            <div class="alert alert-warning">
+                                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                                <strong>Attention ! </strong>Aucun champ fils renseigné.
+                                            </div>
+                                        <?php endif ?>
                                     <?php endif ?>
 
-                                    <?php if(!empty($champ['LIST_CHAMP'])) : ?>
+                                    <?php if($champ['TYPE'] === 'Liste'): ?>
+                                        <?php if(count($champ['VALEURS']) === 0): ?>
+                                            <div class="alert alert-warning">
+                                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                                <strong>Attention !</strong> La liste ne possède aucune valeur, vous devriez en ajouter.
+                                            </div>
+                                        <?php endif ?>
+
                                         <ul>
-                                            <?php foreach($champ['LIST_CHAMP'] as $champFils): ?>
-                                                <li>
-                                                    <?= $champFils['NOM']?>
-                                                    <i><?= $champFils['TYPE']?></i>
-                                                </li>
+                                            <?php foreach($champ['VALEURS'] as $valeur): ?>
+                                                <li><?= htmlspecialchars($valeur['VALEUR']) ?></li>
                                             <?php endforeach ?>
                                         </ul>
-                                    <?php else : ?>
-                                        <div class="alert">
-                                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                            <strong>Attention ! </strong>Aucun champ fils renseigné.
-                                        </div>
                                     <?php endif ?>
-                                <?php endif ?>
-
-                                <?php if($champ['TYPE'] === 'Liste'): ?>
-                                    <?php if(count($champ['VALEURS']) === 0): ?>
-                                        <div class="alert">
-                                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                            <strong>Attention !</strong> La liste ne possède aucune valeur, vous devriez en ajouter.
-                                        </div>
-                                    <?php endif ?>
-
-                                    <ul>
-                                        <?php foreach($champ['VALEURS'] as $valeur): ?>
-                                            <li><?= htmlspecialchars($valeur['VALEUR']) ?></li>
-                                        <?php endforeach ?>
-                                    </ul>
-                                <?php endif ?>
-                            </td>
-                            <td id='actions'>
-                                <div class='text-center'>
-                                    <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
-                                        <span title='Modifier' class='glyphicon glyphicon-pencil' aria-hidden='true'></span>
-                                    </a>
-                                    <button data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" data-nom="<?= $champ['NOM'] ?>" class="btn btn-link delete-champ">
-                                        <i title='Supprimer' class='glyphicon glyphicon-trash' aria-hidden='true'></i>
-                                    </button>
-                                </div>
-                            </td>
-                        </tr>
-                    <?php endforeach ?>
-                </tbody>
-            </table>
-        <?php endif ?>
-    </div>
+                                </td>
+                                <td id='actions'>
+                                    <div class='text-center'>
+                                        <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
+                                            <span title='Modifier' class='glyphicon glyphicon-pencil'></span>
+                                        </a>
+                                        <button data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" data-nom="<?= $champ['NOM'] ?>" class="btn btn-link delete-champ" data-toggle="modal" data-target="#modal-delete-champ">
+                                            <span title='Supprimer' class='glyphicon glyphicon-trash'></span>
+                                        </button>
+                                    </div>
+                                </td>
+                            </tr>
+                        <?php endforeach ?>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    <?php endif ?>
 </div>
+
+<?= $this->render('formulaire/partials/champ/list.phtml') ?>
+<?= $this->render('formulaire/partials/champ/delete.phtml') ?>
